2006-04-09  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (mono_op_imm_to_op): New helper function.

	* mini-codegen.c: Remove mono_opcode_to_stack_type which is only used by the
	ia64 backend.

	* mini-ppc.c mini-arm.c: Remove NOT_IMPLEMENTED macro which is now in mini.h.

	* cpu-pentium.md mini-x86.c: Update x86 backend after latest changes.

	* mini-amd64.c (mono_arch_create_vars): Remove some redundant checks.
	(mono_arch_allocate_vars): Ditto.

	* mini-codegen.c (mono_opcode_to_cond): Add more opcodes.

	* mini-amd64.c (mono_arch_create_vars): Move creation of cfg->var from here...

	* mini.c (mono_compile_create_vars): To here.

	* mini-amd64.c (emit_load_volatile_arguments): Fix this after latest changes.

	* mini-codegen.c (mono_opcode_to_cond): Add more opcodes.

	* mini-amd64.c: Use mono_opcode_to_cond to simplify the emitting of conditional
	branches.

	* mini-ops.h: Add OP_VCALL2_... opcodes.

	* mini.h (MonoCompile): Add 'vret_addr' field.

	* method-to-ir.c mini-amd64.c: Use OP_VCALL2 opcodes for the decomposed 
	valuetype calls.

	* method-to-ir.c mini-amd64.c: Make cfg->ret a 'real' variable and use the
	new 'vret_addr' variable for representing the vtype return address.

	* mini-codegen.c (mono_opcode_to_cond): New helper function, moved here from
	mini-ia64.c.

	* mini-codegen.c (mono_opcode_to_stack_type): Ditto.
	
	* mini-*.c: Move definition of NOT_IMPLEMENTED to mini.h.

2006-04-08  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mini_init): Add missing opcode emulations.

	* mini.h: Add a few new opcode classification macros.
	
	* mini-codegen.c (mono_spillvar_offset): Fix alignment issues.
	(mono_print_ins_index): Fix compilation on non-x86 platforms.

	* method-to-ir.c: Add a few FIXMEs.

	* method-to-ir.c: Fix compilation on non-x86 platforms.

	* method-to-ir.c (mono_method_to_ir2): Add support for architectures where
	fceq and its friends need an fcompare.
	
2006-04-07  Zoltan Varga  <vargaz@gmail.com>
